--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 fastapi==0.104.1
 uvicorn==0.23.2
 sqlalchemy==2.0.23
-pydantic==2.4.2 
+pydantic==2.4.2
+pydantic-settings==2.8.1
+pytest==7.4.0
+requests==2.31.0
+python-multipart==0.0.6
+python-dotenv==1.0.0 
